// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ControlIcon Control Icon 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      aria-label="close"
      class="ControlIcon__StyledButton-sc-1h83lvi-0 cCdEvo"
    >
      <svg
        aria-hidden="true"
        class="Icon-fc7twp-0 efirdb"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="32px"
        icon="close"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots ControlIcon Disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      aria-label="close"
      class="ControlIcon__StyledButton-sc-1h83lvi-0 lkZGcS"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="Icon-fc7twp-0 efirdb"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="32px"
        icon="close"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots ControlIcon Toggled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      aria-label="close"
      class="ControlIcon__StyledButton-sc-1h83lvi-0 jjnZya"
    >
      <svg
        aria-hidden="true"
        class="Icon-fc7twp-0 efirdb"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="32px"
        icon="close"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;
